[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curl"
version = "0.0.1"
description = "My personal curl client."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "GPLv3"}
authors = [
  {name = "Esperoj", email = "esperoj@esperoj.eu.org"}
]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pyright",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--color=yes --exitfirst --failed-first"
xfail_strict = true

[tool.coverage.run]
source = ["curl"]
omit = ["*/tests/*"]

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = ["S101", "ARG001"]

[tool.ruff.format]
quote-style = "double"
